# py-address-screen

./: .env.example  .gitignore  MANIFEST.in  README.md  example-input.csv  main.py  pyproject.toml  requirements.txt  test_output.csv  test_output_no_indirect.csv
.github/: copilot-instructions.md
examples/: databricks_example.py  simple_dataframe.py
py_address_screen/: __init__.py  api_client.py  cli.py  config.py  csv_processor.py
