[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-address-screen"
version = "1.0.0"
description = "Python utility for cryptocurrency address screening using the Chainalysis Address Screening API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "heisler3030", email = "your-email@example.com"}
]
keywords = ["cryptocurrency", "chainalysis", "address-screening", "blockchain", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pandas>=1.5.0",
    "python-dotenv>=0.19.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/heisler3030/py-address-screen"
Repository = "https://github.com/heisler3030/py-address-screen"
Issues = "https://github.com/heisler3030/py-address-screen/issues"

[project.scripts]
py-address-screen = "py_address_screen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["py_address_screen*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"